# openapi/1.25.3/provider_code_spec.json
@@ -1,6 +1,97 @@
 {
 	"datasources": [
 		{
+			"name": "org",
+			"schema": {
+				"attributes": [
+					{
+						"name": "org",
+						"string": {
+							"computed_optional_required": "required",
+							"description": "name of the organization to get"
+						}
+					},
+					{
+						"name": "avatar_url",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The URL of the organization's avatar"
+						}
+					},
+					{
+						"name": "description",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The description of the organization"
+						}
+					},
+					{
+						"name": "email",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The email address of the organization"
+						}
+					},
+					{
+						"name": "full_name",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The full display name of the organization"
+						}
+					},
+					{
+						"name": "id",
+						"int64": {
+							"computed_optional_required": "computed",
+							"description": "The unique identifier of the organization"
+						}
+					},
+					{
+						"name": "location",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The location of the organization"
+						}
+					},
+					{
+						"name": "name",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The name of the organization"
+						}
+					},
+					{
+						"name": "repo_admin_change_team_access",
+						"bool": {
+							"computed_optional_required": "computed",
+							"description": "Whether repository administrators can change team access"
+						}
+					},
+					{
+						"name": "username",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "username of the organization\ndeprecated"
+						}
+					},
+					{
+						"name": "visibility",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The visibility level of the organization (public, limited, private)"
+						}
+					},
+					{
+						"name": "website",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The website URL of the organization"
+						}
+					}
+				]
+			}
+		},
+		{
 			"name": "user",
 			"schema": {
 				"attributes": [
@@ -161,6 +252,109 @@
 		"name": "gitea"
 	},
 	"resources": [
+		{
+			"name": "org",
+			"schema": {
+				"attributes": [
+					{
+						"name": "description",
+						"string": {
+							"computed_optional_required": "computed_optional",
+							"description": "The description of the organization"
+						}
+					},
+					{
+						"name": "email",
+						"string": {
+							"computed_optional_required": "computed_optional",
+							"description": "The email address of the organization"
+						}
+					},
+					{
+						"name": "full_name",
+						"string": {
+							"computed_optional_required": "computed_optional",
+							"description": "The full display name of the organization"
+						}
+					},
+					{
+						"name": "location",
+						"string": {
+							"computed_optional_required": "computed_optional",
+							"description": "The location of the organization"
+						}
+					},
+					{
+						"name": "repo_admin_change_team_access",
+						"bool": {
+							"computed_optional_required": "computed_optional",
+							"description": "Whether repository administrators can change team access"
+						}
+					},
+					{
+						"name": "username",
+						"string": {
+							"computed_optional_required": "required",
+							"description": "username of the organization"
+						}
+					},
+					{
+						"name": "visibility",
+						"string": {
+							"computed_optional_required": "computed_optional",
+							"description": "possible values are `public` (default), `limited` or `private`",
+							"validators": [
+								{
+									"custom": {
+										"imports": [
+											{
+												"path": "github.com/hashicorp/terraform-plugin-framework-validators/stringvalidator"
+											}
+										],
+										"schema_definition": "stringvalidator.OneOf(\n\"public\",\n\"limited\",\n\"private\",\n)"
+									}
+								}
+							]
+						}
+					},
+					{
+						"name": "website",
+						"string": {
+							"computed_optional_required": "computed_optional",
+							"description": "The website URL of the organization"
+						}
+					},
+					{
+						"name": "avatar_url",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The URL of the organization's avatar"
+						}
+					},
+					{
+						"name": "id",
+						"int64": {
+							"computed_optional_required": "computed",
+							"description": "The unique identifier of the organization"
+						}
+					},
+					{
+						"name": "name",
+						"string": {
+							"computed_optional_required": "computed",
+							"description": "The name of the organization"
+						}
+					},
+					{
+						"name": "org",
+						"string": {
+							"computed_optional_required": "computed_optional",
+							"description": "name of the organization to get"
+						}
+					}
+				]
+			}
+		},
 		{
 			"name": "user",
 			"schema": {
